--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,10 +6,12 @@
     <title>LinkedIn Mimic - <%= pageTitle %></title> {# EJS tag for the title #}
     <link rel="stylesheet" href="/css/style.css">
 </head>
+{# views/partials/header.ejs #}
 <body>
     <nav>
-        <a href="/">Home</a> {# Link to the homepage #}
-        {# We'll add more navigation links later #}
+        <a href="/">Home</a> {# Keep this link #}
+        <a href="/register">Register</a> {# --- Add This New Link --- #}
+        {# We will add other links here later, like Login/Logout #}
     </nav>
-    <hr> {# A horizontal line below the nav #}
-    <main class="content"> {# A div or main tag to wrap the main content of the page #}
+    <hr>
+    <main class="content">
