--- a/views/register.ejs
+++ b/views/register.ejs
@@ -16,6 +16,10 @@
         <label for="password">Password:</label> {# Label linked to the password input #}
         <input type="password" id="password" name="password" required> {# Password input, name="password" is key #}
     </div> {# End of password group div #}
+    <div class="form-group">
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required>
+</div>
 
     <div> {# A container div for the submit button #}
         <button type="submit">Register</button> {# The button that submits the form #}
