--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -10,7 +10,11 @@
     <div class="container">
         <h1>Welcome to your Dashboard, <%= username %>!</h1> <p>You have successfully logged in.</p>
         <p>This is where your personalized content would go.</p>
-        <p><a href="/">Go to Home</a></p>
-        <p><a href="/logout" class="btn">Logout</a></p> </div>
+         <div class="links">
+            <p><a href="/profile" class="btn">View My Profile</a></p>
+            <p><a href="/users" class="btn">Discover Users</a></p> <p><a href="/">Go to Home</a></p>
+            <p><a href="/logout" class="btn">Logout</a></p>
+        </div>
+    </div>
 </body>
 </html>
